--- a/package.json
+++ b/package.json
@@ -11,23 +11,29 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@ballcat/vue-cropper": "^1.0.5",
     "@jhbshow/vue-croppa": "^1.3.9",
     "@quasar/extras": "^1.0.0",
     "@vue-leaflet/vue-leaflet": "^0.6.1",
     "apexcharts": "^3.36.3",
     "axios": "^0.21.1",
+    "cropperjs": "^1.5.13",
     "dexie": "^3.2.2",
     "html-to-image": "^1.10.8",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "leaflet": "^1.9.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "pdfkit-table": "^0.1.99",
     "pinia": "^2.0.11",
     "pinia-plugin-persist": "^1.0.0",
     "pinia-plugin-persistedstate": "^2.4.0",
+    "playwright": "^1.32.1",
     "quasar": "^2.6.0",
     "uuid": "^9.0.0",
     "vue": "^3.0.0",
+    "vue-advanced-cropper": "^2.8.8",
     "vue-apexcharts": "^1.6.2",
     "vue-html2pdf": "^1.8.0",
     "vue-i18n": "^9.0.0",
