--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue-i18n": "^9.0.0",
     "vue-json-excel": "^0.3.0",
     "vue-leaflet": "^0.1.0",
+    "vue-print-nb": "^1.7.5",
     "vue-qr": "^4.0.9",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^4.0.0",
@@ -46,7 +47,8 @@
     "vue3-apexcharts": "^1.4.1",
     "vue3-html2pdf": "^1.1.2",
     "vue3-json-excel": "^1.0.10-alpha",
-    "vue3-leaflet": "^1.0.43"
+    "vue3-leaflet": "^1.0.43",
+    "vue3-print-nb": "^0.1.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
